k8s/25-middleware-redirect-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: nikhil
spec:
  redirectScheme:
    scheme: https
    permanent: true
