k8s/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathgame
  namespace: nikhil
  labels:
    app: mathgame
spec:
  selector:
    app: mathgame
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
