k8s/29-ingress-http-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mathgame-http
  namespace: nikhil
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: nikhil-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: maths.nikhilbhatia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mathgame
                port:
                  number: 80
