k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mathgame
  namespace: nikhil
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - maths.nikhilbhatia.com
      secretName: mathgame-tls
  rules:
    - host: maths.nikhilbhatia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mathgame
                port:
                  number: 80
